--- a/README
+++ b/README
@@ -9,66 +9,63 @@ Its goal is simplicity, powerfulness and a same interface on all
 platforms.
 
 Runtime requirements:
-  cygwin-1.5.25-15
-  libQtCore4-4.4.2-1
-  libQtGui4-4.4.2-1
-  libQtNetwork4-4.4.2-1
-  libQtSql4-4.4.2-1
-  libQtXml4-4.4.2-1
+  cygwin-1.7.0-48
   ctags
   gdb
+  libgcc1-4.3.2-2
+  libQtCore4-4.5.1-1
+  libQtGui4-4.5.1-1
+  libQtNetwork4-4.5.1-1
+  libQtSql4-4.5.1-1
+  libstdc++6-4.3.2-2
   make
   qt4-devel-tools
 
 Build requirements:
 (besides corresponding -devel packages)
-  autoconf2.5-2.61-1
-  automake1.10-1.10.1-1
   binutils-20080624-2
-  bison-2.3-1
-  cygport-0.4.0-1
-  flex-2.5.35-1
-  gawk-3.1.6-1
-  gcc-core-3.4.4-3
-  libtool-2.2.2-2
-  make-3.81-1
-  pkg-config-0.23a-2
+  cygport-0.9.6-1
+  gcc4-core-4.3.2-2
+  gcc4-g++-4.3.2-2
+  make-3.81-2
   sed-4.1.5-2
 
 Canonical website:
-  http://qdevelop.free.fr/
+  http://qdevelop.org/
 
 Canonical download:
-  http://qdevelop.free.fr/download/
+  http://qdevelop.org/public/release/
 
 -------------------------------------------
 
 Build instructions:
-  unpack qdevelop-0.25.2-X-src.tar.bz2
+  unpack qdevelop-0.27.4-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./qdevelop-0.25.2-X.cygport all
+  cygport ./qdevelop-0.27.4-X.cygport all
 
 This will create:
-  /usr/src/qdevelop-0.25.2-X-src.tar.bz2
-  /usr/src/qdevelop-0.25.2-X.tar.bz2
+  /usr/src/qdevelop-0.27.4-X-src.tar.bz2
+  /usr/src/qdevelop-0.27.4-X.tar.bz2
 
 -------------------------------------------
 
 Files included in the binary package:
 
   /usr/bin/qdevelop.exe
-  /usr/share/doc/qdevelop-0.25.2/COPYING
-  /usr/share/doc/qdevelop-0.25.2/ChangeLog.txt
-  /usr/share/doc/qdevelop-0.25.2/README.txt
+  /usr/share/applications/qdevelop.desktop
+  /usr/share/doc/qdevelop/COPYING
+  /usr/share/doc/qdevelop/ChangeLog.txt
+  /usr/share/doc/qdevelop/README.txt
+  /usr/share/pixmaps/qdevelop.png
 
 ------------------
 
 Port Notes:
 
------ version 0.25.2-1 -----
-Initial release for Cygwin.
+----- version 0.27.4-1 -----
+Initial release for Cygwin 1.7.
 
 
 Cygwin port maintained by:
